MET-6588 Process review